# robostart

./: .gitignore  Cargo.toml  README.md  flake.nix
.github/workflows/: ci.yml
src/: cache.rs  config.rs  fetcher.rs  lib.rs  main.rs  parser.rs  unpack.rs
src/creation/: fetcher.rs  mod.rs  unpack.rs
